Use isEmpty and similar checks.